--- a/Grandhonor/rk_工地盒子/1-7_优化工作.md
+++ b/Grandhonor/rk_工地盒子/1-7_优化工作.md
@@ -30,3 +30,79 @@ Access-Control-Allow-Methods: *
 
 {"code":0,"curr_page":1,"list":[{"id":1,"name":"company","updatedtime":"2023-6-30 15:45:44","url":"rtsp://admin:a1234567@192.169.7.123:554"},{"id":2,"name":"coffee","updatedtime":"2023-7-4 10:9:0","url":"rtsp://admin:a1234567@192.169.7.111:554"}],"total_count":2,"total_page":1}
 ```
+
++ mg_http_reply 输出信息
+```bash 
+mg_connection information: 
+c->send.buf:HTTP/1.1 200 OK
+Content-Type: application/json
+Connection: keep-alive
+Server: mnc.exe
+Cache-control: no-cache, max-age=0, must-revalidate
+Access-Control-Allow-Origin: *
+Access-Control-Allow-Methods: *
+Content-Length: 288        
+
+
+{"code":0,"curr_page":1,"list":[{"id":1,"name":"company","updatedtime":"2023-6-30 15:45:44","url":"rtsp://admin:a1234567@192.169.7.123:554"},{"id":2,"name":"coffee","updatedtime":"2023-7-4 10:9:0","url":"rtsp://admin:a1234567@192.169.7.111:554"}],"total_count":2,"total_page":1}
+        
+c->send.len:527
+c->send.align:2048
+c->send.size: 2048
+c->is_listening: 0
+c->is_client: 0
+c->is_accepted: 1
+c->is_resolving: 0
+c->is_arplooking: 0
+c->is_connecting: 0
+c->is_tls: 0
+c->is_tls_hs: 0
+c->is_udp: 0
+c->is_websocket: 0
+c->is_mqtt5: 0
+c->is_hexdumping: 0
+c->is_draining: 0
+c->is_closing: 0
+c->is_full: 0
+c->is_resp: 0
+c->is_readable: 1
+c->is_writable: 0
+```
+
++ mg_send 输出信息
+```bash 
+mg_connection information: 
+c->send.buf:
+HTTP/1.1 200 OK
+Content-Type: application/json
+Connection: keep-alive
+Server: mnc.exe
+Cache-control: no-cache, max-age=0, must-revalidate
+Access-Control-Allow-Origin: *
+Access-Control-Allow-Methods: *
+Content-Length: 278        
+
+{"code":0,"curr_page":1,"list":[{"id":1,"name":"company","updatedtime":"2023-6-30 15:45:44","url":"rtsp://admin:a1234567@192.169.7.123:554"},{"id":2,"name":"coffee","updatedtime":"2023-7-4 10:9:0","url":"rtsp://admin:a1234567@192.169.7.111:554"}],"total_count":2,"total_page":1}
+        
+c->send.len:518
+c->send.align:2048
+c->send.size: 2048
+c->is_listening: 0
+c->is_client: 0
+c->is_accepted: 1
+c->is_resolving: 0
+c->is_arplooking: 0
+c->is_connecting: 0
+c->is_tls: 0
+c->is_tls_hs: 0
+c->is_udp: 0
+c->is_websocket: 0
+c->is_mqtt5: 0
+c->is_hexdumping: 0
+c->is_draining: 0
+c->is_closing: 0
+c->is_full: 0
+c->is_resp: 0
+c->is_readable: 1
+c->is_writable: 0
+```
