--- a/Grandhonor/rk_工地盒子/1-6_RK平台试验.md
+++ b/Grandhonor/rk_工地盒子/1-6_RK平台试验.md
@@ -38,6 +38,7 @@ ln -s /rk_usr/lib/librkaiq.so /usr/lib/
 ln -s /rk_usr/lib/libjpeg.so.62 /usr/lib/
 ln -s /rk_usr/lib/libv4lconvert.so.0 /usr/lib/
 ln -s /rk_usr/lib/librockchip_mpp.so.1 /usr/lib/
+ln -s /rk_usr/lib/librockchip_mpp_debug.so.1 /usr/lib/
 ```
 
 + 测试加载模型，输出到共享内存命令
