--- a/Grandhonor/rk_工地盒子/1-7_优化工作.md
+++ b/Grandhonor/rk_工地盒子/1-7_优化工作.md
@@ -106,3 +106,13 @@ c->is_resp: 0
 c->is_readable: 1
 c->is_writable: 0
 ```
+
+## H264_NALU_TYPE_SUB_SPS          = 15
+
+EMA/IVP06A/02软件资料/SDK/ivp06a2_sdk/external/mpp/mpp/common/h264_syntax.h
+
+## mongoose 错误
+
+port: 8000
+Input file: 0.0.0.0
+1275e28 1 mongoose.c:403:mg_error       95 0x24 socket error
