--- a/Grandhonor/rk_工地盒子/1-7_优化工作.md
+++ b/Grandhonor/rk_工地盒子/1-7_优化工作.md
@@ -116,3 +116,11 @@ EMA/IVP06A/02软件资料/SDK/ivp06a2_sdk/external/mpp/mpp/common/h264_syntax.h
 port: 8000
 Input file: 0.0.0.0
 1275e28 1 mongoose.c:403:mg_error       95 0x24 socket error
+
++ 解释：
+  + 1275e28  -- 未知
+  + 1 -- 日志级别
+  + mongoose.c:403:mg_error -- 文件，行数，函数(__FILE__,__LINE__,__func__)
+  + 95 -- 连接id(Auto-incrementing unique connection ID)
+  + 0x24 -- 连接的socket(Connected socket, or LWIP data)
+  + socket error -- 错误消息
