--- a/CPP/C-C++08_常用类.md
+++ b/CPP/C-C++08_常用类.md
@@ -1,3 +1,35 @@
+## 简介
+
++ C++中常用到的类
+
+### std::enable_shared_from_this
+
+在 C++ 中，`std::enable_shared_from_this` 是一个模板类，位于 `<memory>` 头文件中，它用于在共享所有权的智能指针（`std::shared_ptr`）对象中获取指向该对象的 `std::shared_ptr`。
+
+当一个类继承自 `std::enable_shared_from_this` 并且其对象被一个 `std::shared_ptr` 管理时，可以使用 `shared_from_this()` 成员函数来获取一个指向当前对象的 `std::shared_ptr`。
+
+以下是 `std::enable_shared_from_this` 的一些重要特点和使用方法：
+
+1. **必须使用 `std::shared_ptr` 管理对象**：`std::enable_shared_from_this` 只能与 `std::shared_ptr` 一起使用。使用其他类型的智能指针或裸指针将导致未定义行为。
+
+2. **继承 `std::enable_shared_from_this`**：要使用 `std::enable_shared_from_this`，你的类必须继承自它，例如：
+   ```cpp
+   class MyClass : public std::enable_shared_from_this<MyClass> {
+     // ...
+   };
+   ```
+
+3. **获取 `std::shared_ptr` 的方法**：通过调用 `shared_from_this()` 成员函数，可以获取指向当前对象的 `std::shared_ptr`，例如：
+   ```cpp
+   std::shared_ptr<MyClass> ptr = obj.shared_from_this();
+   ```
+
+4. **注意事项**：
+   - `shared_from_this()` 只能在由 `std::shared_ptr` 管理的对象中调用。在构造函数期间或通过裸指针调用会导致未定义行为。
+   - 必须先创建 `std::shared_ptr` 对象，然后才能调用 `shared_from_this()`。否则，将返回一个空的 `std::shared_ptr`。
+
+使用 `std::enable_shared_from_this` 可以方便地获取指向当前对象的 `std::shared_ptr`，以便与其他共享该对象所有权的智能指针一起使用。这在实现资源共享和对象生命周期管理时非常有用，特别是在涉及对象自引用的情况下。
+
 ## std::thread
 
 `std::thread`是C++标准库提供的用于创建和管理线程的类。它位于`<thread>`头文件中，并定义在`std`命名空间中。
