增加rk平台说明文档

--- a/CPP/C-C++08_常用类.md
+++ b/CPP/C-C++08_常用类.md
@@ -95,6 +95,86 @@ int main() {
 
 ---
 
+## std::fstream
+
+`std::fstream` 是 C++ 标准库中用于文件输入输出的类，它是 `std::ifstream`（文件输入流）和 `std::ofstream`（文件输出流）的基类，并结合了它们的功能，使得在同一个对象中可以实现文件的读取和写入。
+
+要使用 `std::fstream` 类，需要包含 `<fstream>` 头文件。
+
+下面是 `std::fstream` 类的详细解释：
+
+## 构造函数：
+- `explicit fstream(const char* filename, ios_base::openmode mode = ios_base::in | ios_base::out);`
+- `explicit fstream(const std::string& filename, ios_base::openmode mode = ios_base::in | ios_base::out);`
+
+构造函数用于创建 `std::fstream` 对象并打开文件。参数 `filename` 是要打开的文件名，参数 `mode` 是打开文件的模式，可以使用 `ios_base::in` 表示读取模式，`ios_base::out` 表示写入模式，`ios_base::app` 表示追加写入模式等等。
+
+## 成员函数：
+- `void open(const char* filename, ios_base::openmode mode = ios_base::in | ios_base::out);`
+- `void open(const std::string& filename, ios_base::openmode mode = ios_base::in | ios_base::out);`
+
+`open` 函数用于打开一个新的文件，并可以指定打开模式。
+
+- `void close();`
+
+`close` 函数用于关闭文件。
+
+- `bool is_open() const;`
+
+`is_open` 函数用于检查文件是否成功打开，返回 true 表示文件已经成功打开，false 表示文件未打开或者打开失败。
+
+- `void clear();`
+
+`clear` 函数用于清除错误状态和结束-of-file标志。
+
+- `void seekg(std::streampos pos);`
+- `void seekg(std::streamoff off, std::ios_base::seekdir way);`
+
+`seekg` 函数用于设置输入位置指针的位置。第一种重载接受一个绝对位置 `pos`，第二种重载接受一个相对位置 `off` 和一个方向 `way`，方向可以是 `std::ios_base::beg`（从开头计算位置），`std::ios_base::cur`（从当前位置计算位置），或者 `std::ios_base::end`（从文件末尾计算位置）。
+
+- `std::streampos tellg();`
+
+`tellg` 函数用于获取当前输入位置指针的位置。
+
+- `void seekp(std::streampos pos);`
+- `void seekp(std::streamoff off, std::ios_base::seekdir way);`
+
+`seekp` 函数用于设置输出位置指针的位置，用法与 `seekg` 类似。
+
+- `std::streampos tellp();`
+
+`tellp` 函数用于获取当前输出位置指针的位置。
+
+- `std::fstream& operator<<(T val);`
+- `std::fstream& operator>>(T& val);`
+
+这些重载的运算符用于将数据写入文件（`operator<<`）或从文件读取数据（`operator>>`）。T 是要写入或读取的数据类型。
+
+## 示例：
+```cpp
+#include <iostream>
+#include <fstream>
+
+int main() {
+    std::fstream file("example.txt", std::ios::out | std::ios::in); // 打开文件用于读写
+    if (file.is_open()) {
+        file << "Hello, World!\n"; // 写入数据到文件
+        file.seekg(0); // 定位输入位置指针到文件开头
+        std::string line;
+        std::getline(file, line); // 从文件读取一行数据
+        std::cout << "Data read from file: " << line << std::endl;
+        file.close(); // 关闭文件
+    } else {
+        std::cout << "Failed to open file!" << std::endl;
+    }
+    return 0;
+}
+```
+
+`std::fstream` 类提供了一个灵活而强大的接口来处理文件的读写操作。通过合理使用其成员函数和运算符重载，可以方便地在 C++ 程序中进行文件输入输出的操作。
+
+---
+
 ## std::ifstream
 
 `std::ifstream` 是 C++ 标准库中用于文件输入的类，用于从文件中读取数据。它是基于流的输入操作符 `>>` 实现的，可以通过打开文件并使用 `>>` 运算符将文件中的数据读取到不同类型的变量中。
