--- a/Grandhonor/rk_工地盒子/rk_doc/1-8_rk编译笔记.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-8_rk编译笔记.md
@@ -121,9 +121,81 @@ g++ -Wall -Werror -Wno-unused-result -o example example.cpp
 
 ## -Wno-deprecated-declarations 
 
+`g++` 是 GNU 编译器集合中的 C++ 编译器，而选项 `-Wno-deprecated-declarations` 是 `g++` 编译器的一个警告选项。使用该选项可以禁止编译器对已被标记为已废弃（deprecated）的声明发出警告信息。
+
+### 什么是已废弃的声明？
+在编程中，随着语言和库的发展，有些函数、类、变量等可能因为某些原因被废弃，意味着它们不再推荐使用，并可能会在将来的版本中被移除或替换。通常，废弃的声明是因为新的更好的替代品出现，或者由于安全或性能等问题。
+
+编译器在进行代码编译时，如果发现代码中使用了已废弃的声明，会发出警告，提醒开发者尽早修改代码以避免潜在的问题。
+
+### -Wno-deprecated-declarations 编译选项的作用：
+使用 `-Wno-deprecated-declarations` 编译选项，会告诉编译器不对已废弃的声明发出警告信息，即禁止这类警告。这在某些情况下可能是有用的，例如当我们明确知道代码中使用了已废弃的声明，但暂时无法修改代码，或者因为特定的需求需要保留这些废弃的声明。
+
+### 示例：
+假设我们有一个名为 `example.cpp` 的 C++ 源文件：
+
+```cpp
+#include <iostream>
+
+[[deprecated("Use newFunction() instead")]]
+void oldFunction() {
+    std::cout << "This is an old function." << std::endl;
+}
+
+int main() {
+    oldFunction(); // 调用已废弃的函数
+
+    return 0;
+}
+```
+
+如果我们使用以下命令编译这个源文件：
+
+```bash
+g++ -Wall -Werror -Wno-deprecated-declarations -o example example.cpp
+```
+
+在上面的命令中，`-Wall` 表示打开所有警告信息，`-Werror` 表示将警告视为错误，而 `-Wno-deprecated-declarations` 则表示禁止对已废弃的声明发出警告。
+
+在这种情况下，由于使用了 `-Wno-deprecated-declarations` 选项，编译器不会对 `oldFunction()` 函数的调用发出警告，尽管它被标记为已废弃。
 
 ## -Wno-psabi
 
+`g++` 是 GNU 编译器集合中的 C++ 编译器，而选项 `-Wno-psabi` 是 `g++` 编译器的一个警告选项。使用该选项可以禁止编译器对 ABI（Application Binary Interface，应用程序二进制接口）不匹配的警告信息。
+
+### 什么是 ABI？
+ABI 是一种二进制接口，定义了应用程序和操作系统、编译器以及其他系统组件之间的交互规则。ABI 定义了如何在二进制级别表示数据类型、函数调用约定、异常处理、动态链接等细节。它确保了不同的软件模块之间能够正确地交互和协同工作。
+
+### -Wno-psabi 编译选项的作用：
+使用 `-Wno-psabi` 编译选项，会告诉编译器不对 ABI 不匹配的情况发出警告信息，即禁止这类警告。
+
+在某些情况下，当代码与其他组件或库编译时，可能会遇到 ABI 不匹配的情况，这可能导致链接错误或其他运行时问题。使用 `-Wno-psabi` 选项可以暂时忽略这类警告，但请注意，禁用这类警告可能会导致潜在的兼容性问题，因此最好在确保代码正确性的前提下使用该选项。
+
+### 示例：
+以下是一个简单的示例，展示如何使用 `g++` 编译器和 `-Wno-psabi` 选项：
+
+假设我们有一个名为 `example.cpp` 的 C++ 源文件：
+
+```cpp
+#include <iostream>
+
+int main() {
+    int a = 42;
+    std::cout << "The value of a is: " << a << std::endl;
+
+    return 0;
+}
+```
+
+如果我们使用以下命令编译这个源文件：
+
+```bash
+g++ -Wno-psabi -o example example.cpp
+```
+
+在上面的命令中，`-Wno-psabi` 表示禁止对 ABI 不匹配的警告。
+
+在这种情况下，编译器不会对 ABI 不匹配的情况发出警告，尽管可能存在潜在的兼容性问题。
 
 ## -Wno-format 
 
