--- a/CPP/C-C++04_常用库.md
+++ b/CPP/C-C++04_常用库.md
@@ -1,5 +1,31 @@
 # 概述 --  各组件接口使用笔记
 
+## libmagic 
+
+`libmagic` 是一个开源的库，用于识别文件类型。它能够通过分析文件的内容来判断文件的类型，而不仅仅依赖于文件的扩展名。这个库最初由 Ian F. Darwin 创建，并且后来被维护和扩展，成为一个广泛使用的文件类型检测工具。
+
+以下是关于 `libmagic` 的一些详细解释：
+
+1. 文件类型识别：
+   `libmagic` 主要用于识别文件的类型。它可以根据文件的内容（magic bytes）来判断文件的类型，例如文本文件、二进制文件、图像、音频、视频、压缩文件等。
+
+2. magic 文件：
+   `libmagic` 使用一个名为 `magic` 的文件来描述文件类型的规则。这个文件包含了一系列的规则和魔术字节（magic bytes）来帮助识别文件类型。这些规则可以被定制和扩展，以适应不同的需求。
+
+3. 魔术字节：
+   魔术字节是一个文件中特定位置的字节序列，用于标识文件类型。例如，许多图像文件的开头会有特定的字节序列，用于识别该文件为图像类型。
+
+4. 命令行工具：
+   `libmagic` 提供了一个命令行工具 `file`，用于在命令行中直接识别文件类型。您可以在命令行中输入 `file filename` 来获取文件的类型信息。
+
+5. 编程接口：
+   `libmagic` 也提供了编程接口，使开发者可以将文件类型检测功能集成到自己的应用程序中。主要有 C、Python、Perl 和 Ruby 等语言的接口。
+
+6. 跨平台支持：
+   `libmagic` 是一个跨平台的库，在 Linux、Unix、macOS 和 Windows 等操作系统上都可以使用。
+
+总的来说，`libmagic` 是一个非常有用的文件类型检测工具，能够帮助我们在文件处理和分析时更准确地判断文件类型，从而做出相应的处理。它被广泛用于文件管理、数据恢复、多媒体应用、网络传输等领域。
+
 ## linux-vdso.so
 
 + linux-vdso.so.1 是一个特殊的动态链接库，它在 Linux 系统中起着重要的作用。VDSO 是 Virtual Dynamic Shared Object（虚拟动态共享对象）的缩写，它是 Linux 内核提供的一种特殊的机制，用于在用户空间和内核空间之间进行高效的系统调用。
