--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,96 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## libmagic 测试示例
+
+在 C++ 中使用 `libmagic` 库进行文件类型识别的示例需要以下步骤：
+
+1. 安装 `libmagic` 库：
+   在使用 `libmagic` 库之前，您需要先在系统中安装该库。在大多数 Linux 发行版中，您可以使用包管理器进行安装。在 Windows 上，可以使用预编译的库或从源代码构建。
+
+2. 创建 C++ 项目：
+   创建一个新的 C++ 项目，例如使用 Visual Studio、Code::Blocks 或其他 IDE。
+
+3. 引入 `libmagic` 头文件：
+   在您的 C++ 代码中引入 `libmagic` 的头文件。
+
+```cpp
+#include <magic.h>
+```
+
+4. 初始化 `libmagic`：
+   在使用 `libmagic` 之前，需要初始化库的上下文。可以使用 `magic_open` 函数来初始化。
+
+```cpp
+magic_t magicCookie = magic_open(MAGIC_MIME_TYPE | MAGIC_NO_CHECK_COMPRESS);
+if (magicCookie == NULL) {
+    // 处理初始化失败的情况
+}
+```
+
+5. 设置 `libmagic` 数据库路径（可选）：
+   默认情况下，`libmagic` 使用系统提供的魔术数据库文件。如果需要，您可以使用 `magic_load` 函数加载自定义的魔术数据库文件。
+
+```cpp
+if (magic_load(magicCookie, NULL) != 0) {
+    // 处理加载数据库失败的情况
+}
+```
+
+6. 识别文件类型：
+   使用 `magic_file` 函数来识别文件类型。该函数将返回文件的 MIME 类型。
+
+```cpp
+const char* filename = "path/to/your/file";
+const char* mimeType = magic_file(magicCookie, filename);
+if (mimeType == NULL) {
+    // 处理识别文件类型失败的情况
+} else {
+    std::cout << "File MIME type: " << mimeType << std::endl;
+}
+```
+
+7. 关闭 `libmagic`：
+   在使用完成后，记得关闭 `libmagic` 上下文。
+
+```cpp
+magic_close(magicCookie);
+```
+
+完整的示例代码如下：
+
+```cpp
+#include <iostream>
+#include <magic.h>
+
+int main() {
+    magic_t magicCookie = magic_open(MAGIC_MIME_TYPE | MAGIC_NO_CHECK_COMPRESS);
+    if (magicCookie == NULL) {
+        std::cerr << "Failed to initialize libmagic" << std::endl;
+        return 1;
+    }
+
+    if (magic_load(magicCookie, NULL) != 0) {
+        std::cerr << "Failed to load magic database" << std::endl;
+        magic_close(magicCookie);
+        return 1;
+    }
+
+    const char* filename = "path/to/your/file";
+    const char* mimeType = magic_file(magicCookie, filename);
+    if (mimeType == NULL) {
+        std::cerr << "Failed to determine file type" << std::endl;
+    } else {
+        std::cout << "File MIME type: " << mimeType << std::endl;
+    }
+
+    magic_close(magicCookie);
+    return 0;
+}
+```
+
+请确保根据您的系统和编译环境调整上述代码，以及正确链接 `libmagic` 库。此示例演示了如何使用 `libmagic` 库来识别文件类型并输出其 MIME 类型。
+
 ## rmdir 删除目录失败
 
 如果在使用C++的`rmdir()`函数时删除目录失败，可能是由于以下原因之一：
