--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,66 @@
 
 + C/C++ 编程语言理论基础
 
+## 比特位 读写
+
+在C++中，可以使用位操作运算符来进行比特位的读写操作。位操作运算符允许你直接对变量的二进制位进行操作，从而有效地读取和写入单个比特位。
+
+以下是一些常用的位操作运算符和示例：
+
+1. 与运算符（&）：
+   用于检查特定比特位的状态。将要检查的比特位置1，其他位置0，然后通过与运算得到结果。
+
+   示例：检查第3个比特位是否为1
+   ```cpp
+   bool isBitSet = (number & (1 << 2)) != 0;
+   ```
+
+2. 或运算符（|）：
+   用于设置特定比特位的状态。将要设置的比特位置1，其他位置保持不变，然后通过或运算得到结果。
+
+   示例：设置第5个比特位为1
+   ```cpp
+   number |= (1 << 4);
+   ```
+
+3. 异或运算符（^）：
+   用于切换特定比特位的状态。将要切换的比特位置1，其他位置保持不变，然后通过异或运算得到结果。
+
+   示例：切换第2个比特位的状态
+   ```cpp
+   number ^= (1 << 1);
+   ```
+
+4. 取反运算符（~）：
+   用于取反变量的所有比特位。
+
+   示例：将所有比特位取反
+   ```cpp
+   number = ~number;
+   ```
+
+5. 左移运算符（<<）：
+   将一个数的所有比特位向左移动指定的位数。
+
+   示例：将number的比特位向左移动3位
+   ```cpp
+   number = number << 3;
+   ```
+
+6. 右移运算符（>>）：
+   将一个数的所有比特位向右移动指定的位数。对于无符号类型，左侧补0；对于有符号类型，左侧补符号位。
+
+   示例：将number的比特位向右移动2位
+   ```cpp
+   number = number >> 2;
+   ```
+
+注意事项：
+- 在进行位操作时，务必确保要操作的比特位在合法的范围内，避免访问未定义的行为。
+- 使用无符号整数类型（例如`unsigned int`）可以避免在右移操作时出现符号位扩展的问题。
+
+请根据你的具体需求选择适合的位操作运算符来进行比特位的读写操作。
+
 ## C++ 常用容器 详解
 
 C++ 标准模板库（Standard Template Library，STL）提供了许多常用的容器，这些容器是用于存储和管理数据的数据结构。STL 容器提供了各种不同类型的数据结构，以满足不同的需求。以下是 C++ 中常用的 STL 容器的详细解释：
