--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,39 @@
 
 + C++ 相关的理论基础知识
 
+## sizeof 详解
+
+在C++中，`sizeof`是一元运算符，用于确定数据类型或对象的大小（以字节为单位）。它返回一个`size_t`（无符号整数）值，表示操作数的大小。
+
+`sizeof`主要有两种用法：
+
+1. 数据类型的大小：
+   可以使用`sizeof`来获取数据类型的大小。例如：
+   ```cpp
+   sizeof(int);     // 返回int类型的大小（通常为4字节）
+   sizeof(char);    // 返回char类型的大小（通常为1字节）
+   sizeof(double);  // 返回double类型的大小（通常为8字节）
+   ```
+
+2. 对象的大小：
+   还可以使用`sizeof`来获取对象在内存中的大小。例如：
+   ```cpp
+   int arr[5];
+   sizeof(arr);       // 返回整个数组的大小（5 * sizeof(int)）
+   
+   struct MyStruct {
+       int x;
+       char c;
+   };
+   
+   MyStruct obj;
+   sizeof(obj);       // 返回整个MyStruct对象的大小
+   ```
+
+需要注意的是，`sizeof`在编译时求值，它不会实际执行给定的表达式。它在处理数组、结构体或需要使用`malloc`或`new`动态分配内存时特别有用。
+
+值得一提的是，某些数据类型的大小可能因平台和使用的编译器而异。然而，`sizeof`保证在编译时准确确定数据类型或对象的大小，从而确保在不同系统上的可移植性。
+
 ## 强关联 是什么
 
 "强关联"（Strong Association）是面向对象编程（OOP）中的一个概念，指的是两个或多个类之间的关系非常紧密，彼此之间的依赖性很强。
