--- a/CPP/C-C++02_2_常用函数.md
+++ b/CPP/C-C++02_2_常用函数.md
@@ -2,6 +2,56 @@
 
 + C/C++常用函数，大部分为C函数
 
+## fnmatch
+
+`fnmatch()` 函数是C标准库中用于进行模式匹配的函数之一，它可以用来比较一个字符串是否匹配指定的模式。这个函数通常用于文件名匹配等场景。以下是关于 `fnmatch()` 函数的详细解释：
+
+**函数原型：**
+```c
+#include <fnmatch.h>
+
+int fnmatch(const char *pattern, const char *string, int flags);
+```
+
+**参数：**
+- `pattern`：要匹配的模式字符串。
+- `string`：要进行匹配的输入字符串。
+- `flags`：控制匹配行为的标志位，可以是以下之一或它们的组合：
+  - `FNM_NOESCAPE`：不解释反斜杠 `\` 作为转义字符。
+  - `FNM_PATHNAME`：模式中的斜杠只与斜杠匹配。
+  - `FNM_PERIOD`：模式中的起始点 `.` 只与起始点匹配。
+  - `FNM_FILE_NAME`：等效于 `FNM_PATHNAME | FNM_PERIOD`。
+
+**返回值：**
+- 如果匹配成功，返回0。
+- 如果不匹配，返回 `FNM_NOMATCH`。
+- 如果发生错误，返回其他非零值。
+
+**示例：**
+```c
+#include <fnmatch.h>
+#include <stdio.h>
+
+int main() {
+    const char *pattern = "*.txt";
+    const char *strings[] = {"file.txt", "example.txt", "document.doc"};
+
+    for (size_t i = 0; i < sizeof(strings) / sizeof(strings[0]); ++i) {
+        if (fnmatch(pattern, strings[i], 0) == 0) {
+            printf("%s matches the pattern.\n", strings[i]);
+        } else {
+            printf("%s does not match the pattern.\n", strings[i]);
+        }
+    }
+
+    return 0;
+}
+```
+
+在上面的示例中，`fnmatch()` 函数被用来检查字符串数组中的每个元素是否匹配指定的模式。`pattern` 参数是要匹配的模式，`string` 参数是要进行匹配的字符串。函数返回0表示匹配成功，`FNM_NOMATCH` 表示不匹配。
+
+需要注意的是，`fnmatch()` 函数可能会依赖于实现和操作系统的特定行为。在使用时，务必查阅操作系统和标准库的文档来了解更多细节和支持情况。
+
 ## inet_ntoa
 
 在 C 语言中，`inet_ntoa()` 函数用于将网络字节序（大端字节序）的IPv4地址转换为点分十进制形式的字符串表示。它的详细说明如下：
