--- a/Grandhonor/rk_工地盒子/rk_doc/1-11_平台部署.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-11_平台部署.md
@@ -21,3 +21,7 @@ tar -cvf rk_image.tar --exclude=/sys --exclude=/system --exclude=/proc --exclude
 + 清除告警记录，通过mnc-cmd.sh --warning-record-clear
 + 清除告警图片 rm /data/static/warning_record/*.jpg
 + 清除系统配置的推送地址
+
+## vca 编译命令
+
++ `./configure.sh -c ROCKCHIP -p arm -g -m rk1126`
