--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,74 @@
 
 + C++ 相关的理论基础知识
 
+## stdint.h 详解
+
+`stdint.h` 是 C 语言标准库中的一个头文件，它提供了一些固定大小的整数类型，以增强代码的可移植性和可读性。在不同的平台上，整数类型的大小可能会有所不同，为了确保代码在各种环境下都能正常工作，可以使用 `stdint.h` 中定义的整数类型。
+
+以下是 `stdint.h` 中常见定义的解释：
+
+1. **int8_t、int16_t、int32_t、int64_t**: 这些是有符号整数类型，分别表示 8 位、16 位、32 位和 64 位的整数。它们的范围是从 `-2^n-1` 到 `2^n-1 - 1`，其中 `n` 是整数类型的位数。
+
+2. **uint8_t、uint16_t、uint32_t、uint64_t**: 这些是无符号整数类型，与上面的有符号整数类型类似，分别表示 8 位、16 位、32 位和 64 位的无符号整数。它们的范围是从 0 到 `2^n - 1`。
+
+3. **int_least8_t、int_least16_t、int_least32_t、int_least64_t**: 这些是至少具有指定位数的有符号整数类型。它们可以更具灵活性地选择整数类型，以适应不同平台的位数要求。
+
+4. **uint_least8_t、uint_least16_t、uint_least32_t、uint_least64_t**: 类似于上面的 `int_leastX_t` 类型，这些是至少具有指定位数的无符号整数类型。
+
+5. **int_fast8_t、int_fast16_t、int_fast32_t、int_fast64_t**: 这些是最快的有符号整数类型，可以根据平台的性能选择合适的整数类型，以提高性能。
+
+6. **uint_fast8_t、uint_fast16_t、uint_fast32_t、uint_fast64_t**: 类似于上面的 `int_fastX_t` 类型，这些是最快的无符号整数类型。
+
+7. **intptr_t**: 这是一个有符号整数类型，足够大以容纳指针值。它的大小可以保证足够存储指针。
+
+8. **uintptr_t**: 类似于上面的 `intptr_t` 类型，这是一个无符号整数类型，足够大以容纳指针值。
+
+通过使用 `stdint.h` 中定义的整数类型，你可以编写更加可移植且具有明确整数大小的代码。这在需要确保整数大小和跨平台一致性的情况下非常有用，尤其是在涉及底层编程、二进制数据处理和嵌入式系统等领域。
+
+## stdlib.h 详解
+
+`stdlib.h` 是 C 语言标准库中的一个头文件，它提供了一些与内存分配、随机数生成、字符串转换等功能相关的函数和定义。这个头文件包含了许多常用的函数，能够帮助你进行内存管理、随机数生成以及字符串处理等操作。
+
+以下是 `stdlib.h` 中常见函数和定义的解释：
+
+1. **malloc(size_t size)**: 这个函数用于在堆内存上分配一块指定大小的内存空间，并返回一个指向该内存块的指针。如果分配成功，返回的指针可以用来存储数据。如果分配失败，返回 `NULL`。
+
+2. **calloc(size_t num_elements, size_t element_size)**: 类似于 `malloc`，但是它会分配一块可以存储多个元素的内存空间，并将这些内存初始化为零。它接受两个参数，一个是元素数量，另一个是每个元素的大小。
+
+3. **realloc(void *ptr, size_t new_size)**: 这个函数允许你重新调整之前使用 `malloc` 或 `calloc` 分配的内存块的大小。它接受一个指针和新的大小作为参数，会尝试重新分配内存，并返回一个新的指向调整后内存块的指针。如果调整失败，返回 `NULL`。
+
+4. **free(void *ptr)**: 用于释放之前通过 `malloc`、`calloc` 或 `realloc` 分配的内存空间。释放后，这块内存可以被重新分配给其他数据。
+
+5. **rand()** 和 **srand(unsigned int seed)**: `rand()` 用于生成一个伪随机整数，范围通常在 0 到 `RAND_MAX` 之间。`srand()` 用于初始化随机数生成器的种子，以便每次程序运行时生成不同的随机序列。
+
+6. **atoi(const char *str)** 和 **atof(const char *str)**: 这些函数用于将字符串转换为整数或浮点数。
+
+7. **exit(int status)**: 这个函数终止程序的执行，并返回一个状态码给操作系统。通常情况下，0 表示程序成功执行，非零值表示程序异常终止。
+
+8. **system(const char *command)**: 这个函数允许你执行系统命令。它会调用操作系统的命令解释器来执行给定的命令字符串。
+
+9. **getenv(const char *name)**: 这个函数用于获取环境变量的值，返回一个指向字符串的指针。
+
+`stdlib.h` 提供了许多常用的函数，用于内存分配、随机数生成和字符串转换等操作。这些函数可以帮助你写出更加功能完备且可移植的 C 代码。记住，在使用这些函数时要小心内存泄漏等问题，确保在不需要使用分配的内存时进行释放。
+
+## stddef.h 详解
+
+`stddef.h` 是 C 语言标准库中的一个头文件，它提供了一些与指针和数据类型大小相关的定义。它为了提供可移植性和规范性，定义了一些常用的宏和类型，使得代码在不同平台上能够保持一致性。
+
+以下是一些 `stddef.h` 中常见定义的解释：
+
+1. **NULL**: 这是一个用来表示空指针的宏，通常被定义为整数 0。在 C 语言中，空指针表示指向任何内存位置的无效指针。
+
+2. **size_t**: 这是一个无符号整数类型，在很多情况下用来表示内存块的大小、数组的长度等。它的大小根据不同的系统架构可能会有所变化。
+
+3. **ptrdiff_t**: 这是一个用来表示两个指针之间差值的整数类型。它在指针运算和数组索引中很有用。
+
+4. **offsetof(type, member)**: 这是一个宏，用来计算一个结构体中成员的偏移量。在某些情况下，你可能需要直接访问结构体内部的某个成员，这时就可以用这个宏来计算偏移量。
+
+5. **wchar_t**: 这是一种用来表示宽字符的数据类型，通常用在支持多语言字符集的环境中。
+
+总的来说，`stddef.h` 提供了一些基本的数据类型和宏定义，有助于编写更加通用和可移植的 C 代码。通过使用这些定义，你可以在不同的系统上编写出更具可读性和健壮性的代码，避免了硬编码的问题。记住，这些定义可能会在不同的编译器和系统中有所不同，所以在使用时要注意兼容性。
+
 ## sizeof 详解
 
 在C++中，`sizeof`是一元运算符，用于确定数据类型或对象的大小（以字节为单位）。它返回一个`size_t`（无符号整数）值，表示操作数的大小。
