--- a/Grandhonor/Robot-协作机器人开发/vcr-doc/1-2_命令设计.md
+++ b/Grandhonor/Robot-协作机器人开发/vcr-doc/1-2_命令设计.md
@@ -1,15 +1,7 @@
 ## 简介
 
-+ 电动吸盘的命令
++ 运动轨迹
 
-## 初始化
+## 逆解
 
-+ cmd=1
-
-## 启动
-
-+ cmd=2
-
-## 停止
-
-+ cmd=3
++ 三关节，五关节 给九十度，作为逆解的基准坐标，这样逆解出来的关节角更偏向关节在上方
