--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,66 @@
 
 + C/C++ 编程语言理论基础
 
+## 友元 friend
+
+在 C++ 中，**友元**（friend）是一种访问控制机制，它允许一个函数或类访问另一个类的私有成员。友元关系通过在类的定义中使用 `friend` 关键字来建立。
+
+友元的主要用途是在一些特殊情况下提供灵活的访问权限，但也应该谨慎使用，因为它可能会破坏类的封装性和隔离性。
+
+以下是关于 C++ 中友元的详细解释：
+
+1. **友元函数**：在类定义中使用 `friend` 关键字声明一个函数为友元函数。这意味着友元函数可以访问该类的私有和受保护成员。友元函数不是类的成员函数，但它具有特殊的权限，可以直接访问私有成员。
+
+2. **友元类**：同样，可以使用 `friend` 关键字将一个类声明为另一个类的友元类。这意味着友元类的所有成员函数可以访问该类的私有和受保护成员。友元类可以访问另一个类的私有成员，但不会继承它的成员。
+
+友元关系是双向的：如果类 A 是类 B 的友元，那么类 B 也可以访问类 A 的私有成员。
+
+下面是一个示例，演示了如何在 C++ 中使用友元函数和友元类：
+
+```cpp
+#include <iostream>
+
+class FriendExample {
+private:
+    int privateValue;
+
+public:
+    FriendExample(int value) : privateValue(value) {}
+
+    friend void FriendFunction(FriendExample& obj);  // 友元函数声明
+    friend class FriendClass;  // 友元类声明
+};
+
+// 友元函数定义
+void FriendFunction(FriendExample& obj) {
+    std::cout << "Friend Function accessing privateValue: " << obj.privateValue << std::endl;
+}
+
+// 友元类定义
+class FriendClass {
+public:
+    void AccessPrivateValue(FriendExample& obj) {
+        std::cout << "Friend Class accessing privateValue: " << obj.privateValue << std::endl;
+    }
+};
+
+int main() {
+    FriendExample obj(42);
+    FriendFunction(obj);
+
+    FriendClass friendObj;
+    friendObj.AccessPrivateValue(obj);
+
+    return 0;
+}
+```
+
+在这个示例中，`FriendExample` 类的 `privateValue` 是私有成员。`FriendFunction` 被声明为 `FriendExample` 类的友元函数，而 `FriendClass` 被声明为 `FriendExample` 类的友元类。因此，这两者都可以访问 `FriendExample` 类的私有成员。
+
+友元机制在某些情况下很有用，例如在需要特定函数或类能够访问另一个类的私有成员时。然而，过度使用友元可能会破坏封装性，应该谨慎使用。
+
+---
+
 ## 比特位 读写
 
 在C++中，可以使用位操作运算符来进行比特位的读写操作。位操作运算符允许你直接对变量的二进制位进行操作，从而有效地读取和写入单个比特位。
