--- a/CPP/C-C++02_2_常用函数.md
+++ b/CPP/C-C++02_2_常用函数.md
@@ -2,6 +2,39 @@
 
 + C/C++常用函数，大部分为C函数
 
+## ceil
+
+在 C 语言中，`ceil()` 是一个数学函数，用于向上取整（上取整数）。这意味着它会将一个浮点数值调整到不小于它的最小整数。`ceil()` 函数位于 `math.h` 头文件中。
+
+函数原型如下：
+
+```c
+double ceil(double x);
+```
+
+参数 `x` 是一个浮点数，函数返回大于或等于 `x` 的最小整数值。返回值是一个双精度浮点数。
+
+下面是一个示例代码，演示了如何使用 `ceil()` 函数：
+
+```c
+#include <stdio.h>
+#include <math.h>
+
+int main() {
+    double num = 12.34;
+    double result = ceil(num);
+
+    printf("Original Number: %.2f\n", num);
+    printf("Ceil Value: %.2f\n", result);
+
+    return 0;
+}
+```
+
+在这个示例中，`ceil(12.34)` 的返回值是 `13.00`，因为它是不小于 `12.34` 的最小整数。
+
+`ceil()` 函数在很多数学计算和处理场景中非常有用，特别是在需要确保向上取整的情况下，比如计算资源分配、涉及货币的计算等。
+
 ## fnmatch
 
 `fnmatch()` 函数是C标准库中用于进行模式匹配的函数之一，它可以用来比较一个字符串是否匹配指定的模式。这个函数通常用于文件名匹配等场景。以下是关于 `fnmatch()` 函数的详细解释：
