--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,91 @@
 
 + C/C++ 编程语言理论基础
 
+## C++ 预处理指令详解
+
+C++预处理器是一个在实际编译之前执行的阶段，它处理以 `#` 开头的预处理指令。这些指令用于在源代码中进行文本替换、条件编译、头文件包含等操作，以及定义宏和条件编译代码块。以下是一些常见的C++预处理指令以及它们的作用：
+
+1. **#include：**
+   用于包含其他文件中的内容。主要用于包含头文件，以便在源文件中使用头文件中的声明和定义。
+
+   示例：
+   ```cpp
+   #include <iostream>   // 包含C++标准库的iostream头文件
+   #include "myheader.h" // 包含自定义头文件
+   ```
+
+2. **#define：**
+   用于定义宏。预处理器会将宏名称替换为相应的文本。可以用于创建常量、函数宏等。
+
+   示例：
+   ```cpp
+   #define PI 3.14159
+   #define MAX(x, y) ((x) > (y) ? (x) : (y))
+   ```
+
+3. **#ifdef / #ifndef / #else / #endif：**
+   用于条件编译。根据指定的条件，决定是否编译某段代码。`#ifdef` 表示 "如果定义了宏"，`#ifndef` 表示 "如果未定义宏"，`#else` 表示 "否则"，`#endif` 表示结束条件块。
+
+   示例：
+   ```cpp
+   #ifdef DEBUG
+       // 调试时执行的代码
+   #else
+       // 发布版本时执行的代码
+   #endif
+   ```
+
+4. **#if / #elif / #else / #endif：**
+   类似于条件编译，但允许在代码中进行更复杂的条件判断，如使用预定义宏来确定编译路径。
+
+   示例：
+   ```cpp
+   #if defined(_WIN32)
+       // Windows平台下的代码
+   #elif defined(__linux__)
+       // Linux平台下的代码
+   #else
+       // 其他平台下的代码
+   #endif
+   ```
+
+5. **#undef：**
+   用于取消宏定义。如果需要取消一个已定义的宏，可以使用 `#undef`。
+
+   示例：
+   ```cpp
+   #define MY_MACRO 42
+   #undef MY_MACRO
+   ```
+
+6. **#pragma：**
+   用于在编译器中插入特定的指令。`#pragma` 指令的效果和语法会因编译器而异。
+
+   示例：
+   ```cpp
+   #pragma warning(disable : 1234)
+   ```
+
+7. **#error：**
+   用于生成编译错误消息。可以用于在特定条件下阻止编译，或者为开发者提供有用的错误信息。
+
+   示例：
+   ```cpp
+   #ifdef OLD_COMPILER
+       #error "This version is not supported by the old compiler"
+   #endif
+   ```
+
+8. **#line：**
+   用于改变编译器报告的行号和文件名，通常用于错误消息或调试信息的生成。
+
+   示例：
+   ```cpp
+   #line 100 "mycode.cpp"
+   ```
+
+C++预处理器的这些指令允许您在编译前进行一些文本操作和条件判断，以便根据不同的情况定制化代码的编译过程。它们在代码的可维护性和可配置性方面非常有用。
+
 ## 友元 friend
 
 在 C++ 中，**友元**（friend）是一种访问控制机制，它允许一个函数或类访问另一个类的私有成员。友元关系通过在类的定义中使用 `friend` 关键字来建立。
