--- a/CPP/C-C++04_常用库.md
+++ b/CPP/C-C++04_常用库.md
@@ -1,5 +1,23 @@
 # 概述 --  各组件接口使用笔记
 
+## libxmu-dev
+
+`libxmu-dev` 是针对 Linux 操作系统的一个开发包，用于开发基于 X Window 系统的图形用户界面应用程序。下面我将为你详细解释一下这个开发包的相关内容。
+
+1. **X Window 系统**：X Window 系统，也称为 X11，是一种用于图形界面的基础架构，允许在计算机屏幕上绘制图形和显示图像。它提供了基本的图形绘制、窗口管理、用户输入等功能，是许多图形用户界面环境的基础。
+
+2. **libxmu-dev 包含的内容**：`libxmu-dev` 是一个开发包，提供了与 X Window 系统和 Xlib 相关的头文件和库文件，以便开发者能够创建使用 X Window 系统的图形界面应用程序。这个开发包的内容包括：
+
+   - **头文件（Header Files）**：这些头文件包含了与 Xlib 库函数和数据结构相关的声明，使开发者能够在代码中使用这些函数和结构体。头文件的扩展名通常是 `.h`。
+
+   - **库文件（Library Files）**：库文件包含了编译好的 Xlib 库函数的二进制代码，这些库可以在链接时与应用程序一起使用。库文件的扩展名通常是 `.a`（静态库）或 `.so`（共享库）。
+
+3. **Xlib 库**：Xlib 是 X Window 系统的客户端库，它提供了一组函数和数据结构，用于与 X 服务器进行通信、创建窗口、处理事件、绘制图形等。通过使用 Xlib，开发者可以在应用程序中管理窗口、绘制图形元素、响应用户输入等。
+
+4. **Xmu 库**：Xmu 是 X Window 系统的辅助库，它建立在 Xlib 之上，提供了一些常见的功能，如字符串处理、几何结构操作、资源管理等。`libxmu-dev` 中的文件可能包括 Xmu 库的头文件和库文件，使开发者能够更方便地使用这些功能。
+
+总之，`libxmu-dev` 提供了开发基于 X Window 系统的图形界面应用程序所需的工具和资源，包括 Xlib 和 Xmu 库的头文件和库文件。通过使用这些工具，开发者可以创建具有丰富图形界面的应用程序，处理窗口、事件、图形绘制等任务。
+
 ## libmagic 
 
 `libmagic` 是一个开源的库，用于识别文件类型。它能够通过分析文件的内容来判断文件的类型，而不仅仅依赖于文件的扩展名。这个库最初由 Ian F. Darwin 创建，并且后来被维护和扩展，成为一个广泛使用的文件类型检测工具。
