--- a/Grandhonor/Robot-协作机器人开发/ty-doc/1_2_开发接口.md
+++ b/Grandhonor/Robot-协作机器人开发/ty-doc/1_2_开发接口.md
@@ -228,3 +228,43 @@ TYISP_CAPI TYISPRelease(TY_ISP_HANDLE *handle);
 /// @retval TY_STATUS_WRONG_SIZE        The input buffer is not large enough.
 TY_CAPI TYEnqueueBuffer           (TY_DEV_HANDLE hDevice, void* buffer, uint32_t bufferSize);
 ```
+
+
+## 点云数据处理
+
+### 深度数据图 ==> 点云
+
++ TYMapDepthImageToPoint3d 转换深度数据图为点云，输入深度相机的标定数据，深度图宽、高、和深度图，输出点云。数值为 0 的无效深度点映射为 (NAN, NAN, NAN)。
+```c
+TY_CAPI   TYMapDepthImageToPoint3d  (const TY_CAMERA_CALIB_INFO* src_calib,
+                                     int32_t imageW, int32_t imageH,
+                                     const uint16_t* depth,
+                                     TY_VECT_3F* point3d,
+                                     float f_scale_unit = 1.0f);
+```
+
+### 映射彩色图 到 深度图坐标
+
++ TYMapRGBImageToDepthCoordinate 映射彩色图到深度图坐标。输入深度图标定数据、深度图宽和高、深度图、彩色图标定数据、彩色图宽和高、彩色图，输出映射后的彩色图像数据。
+```c
+static inline TY_STATUS TYMapRGBImageToDepthCoordinate(
+              const TY_CAMERA_CALIB_INFO* depth_calib,
+              uint32_t depthW, uint32_t depthH, const uint16_t* depth,
+              const TY_CAMERA_CALIB_INFO* color_calib,
+              uint32_t rgbW, uint32_t rgbH, const uint8_t* inRgb,
+              uint8_t* mappedRgb,
+                  float f_scale_unit = 1.0f);
+```
+
+## 图像处理
+
+### 畸变矫正
+
++ TYUndistortImage 畸变校正，可对传感器组件输出的图像做畸变处理，支持的数据格式包括：TY_PIXEL_FORMAT_MONO、TY_PIXEL_FORMAT_RGB、TY_PIXEL_FORMAT_BGR。输入参数为传感器标定数据、未矫正原始图像和期望的图像内参（输入为 NULL 则使用传感器原有内参），输出校正后的图像数据。
+```c
+TY_CAPI TYUndistortImage (const TY_CAMERA_CALIB_INFO *srcCalibInfo
+    , const TY_IMAGE_DATA *srcImage
+    , const TY_CAMERA_INTRINSIC *cameraNewIntrinsic
+    , TY_IMAGE_DATA *dstImage
+    );
+```
