--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,27 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## std::cout "\033[36m" 是什么意思
+
+在C++中，`std::cout` 是标准输出流对象，用于将文本数据打印到控制台。`\033[36m` 是一种 ANSI 转义序列，用于在终端中设置文本颜色。具体来说，`\033` 表示转义字符，`[36m` 是用于设置文本颜色的 ANSI 转义码。`[36m` 表示设置文本颜色为青色（cyan）。
+
+所以，如果您在使用 `std::cout` 时添加 `\033[36m`，则之后打印在终端的文本将会以青色显示。
+
+示例代码：
+
+```cpp
+#include <iostream>
+
+int main()
+{
+    std::cout << "\033[36mThis text is in cyan color.\033[0m" << std::endl;
+    std::cout << "This text is in the default color." << std::endl;
+    return 0;
+}
+```
+
+在这个示例中，第一行的文本将以青色显示，第二行的文本将恢复为默认颜色。请注意，为了恢复文本颜色到默认，我们在末尾使用了 ANSI 转义序列 `\033[0m`。
+
 ## libmagic 测试示例
 
 在 C++ 中使用 `libmagic` 库进行文件类型识别的示例需要以下步骤：
