--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,336 @@
 
 + C/C++ 编程语言理论基础
 
+## C open() O_LARGEFILE 标志
+
+在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`O_LARGEFILE` 是一个标志，用于在一些操作系统中支持大文件的功能。
+
+在一些操作系统中，文件的大小可能受到限制，特别是在32位系统中。`O_LARGEFILE` 标志的作用是告诉操作系统在打开文件时使用64位的偏移量，以支持大文件。这意味着即使在32位系统中，你仍然可以处理超过2GB大小的文件。
+
+以下是使用 `O_LARGEFILE` 标志的示例：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+
+int main() {
+    const char *filename = "largefile.txt";
+
+    // 使用 O_LARGEFILE 标志打开文件
+    int fd = open(filename, O_RDWR | O_CREAT | O_LARGEFILE, 0666);
+
+    if (fd == -1) {
+        perror("Error opening file");
+        return 1;
+    }
+
+    // 进行文件操作...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上面的示例中，我们使用了 `O_LARGEFILE` 标志来打开文件。请注意，使用这个标志时，可能需要操作系统和文件系统的支持，否则这个标志可能不会产生预期的效果。
+
+需要注意的是，现代操作系统和文件系统通常会自动处理大文件，因此在大多数情况下，你不需要显式地使用 `O_LARGEFILE` 标志来打开文件。只有在处理旧的或不常见的系统时，可能需要考虑这个标志。
+
+## C open() O_CLOEXEC 标志
+
+在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`O_CLOEXEC` 是一个标志，用于在打开文件时设置文件描述符的 close-on-exec 标志。
+
+`close-on-exec` 是一个进程属性，当进程调用 `exec()` 系列函数执行一个新程序时，所有的文件描述符（除了标准输入、标准输出和标准错误）会被关闭。`O_CLOEXEC` 标志的作用是在打开文件时，将这个文件描述符设置为 close-on-exec，这样在执行 `exec()` 函数时会自动关闭它。
+
+以下是使用 `O_CLOEXEC` 标志的示例：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+
+int main() {
+    const char *filename = "example.txt";
+
+    // 使用 O_CLOEXEC 标志打开文件
+    int fd = open(filename, O_RDWR | O_CREAT | O_CLOEXEC, 0666);
+
+    if (fd == -1) {
+        perror("Error opening file");
+        return 1;
+    }
+
+    // 进行文件操作...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上面的示例中，我们使用了 `O_CLOEXEC` 标志来打开文件。这意味着在执行 `exec()` 函数时，文件描述符 `fd` 会自动关闭。
+
+需要注意的是，`O_CLOEXEC` 标志通常用于在多进程环境中，通过设置文件描述符的 close-on-exec 标志，可以避免在执行 `exec()` 函数时造成不必要的文件描述符泄漏。这对于创建安全的、不会在子进程中意外共享文件描述符的程序非常有用。
+
+## C open() O_CREAT 标志
+
+在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`O_CREAT` 是一个标志，用于在打开文件时，如果文件不存在就创建文件。
+
+当你使用 `O_CREAT` 标志打开一个文件时，如果文件已经存在，则打开现有文件；如果文件不存在，则创建一个新的文件。你通常还需要提供一个权限参数来设置新文件的权限。这个权限参数通常是八进制表示的权限位。
+
+以下是使用 `O_CREAT` 标志的示例：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+
+int main() {
+    const char *filename = "example.txt";
+
+    // 使用 O_CREAT 标志创建文件
+    int fd = open(filename, O_RDWR | O_CREAT, 0666);
+
+    if (fd == -1) {
+        perror("Error opening/creating file");
+        return 1;
+    }
+
+    // 进行文件操作...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上面的示例中，我们使用了 `O_CREAT` 标志来创建文件。如果文件 "example.txt" 不存在，那么就会创建一个新的文件，并赋予其权限 0666。
+
+需要注意的是，使用 `O_CREAT` 标志时，通常还需要提供一个权限参数，以确保新创建的文件拥有适当的权限。如果文件已经存在，那么 `O_CREAT` 标志不会影响文件的现有权限。
+
+## C open() O_NONBLOCK 标志
+
+在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`O_NONBLOCK` 是一个标志，用于在打开文件时设置非阻塞模式。
+
+使用 `O_NONBLOCK` 标志打开文件时，文件描述符会以非阻塞模式打开。在非阻塞模式下，当尝试读取或写入文件时，如果没有数据可读或没有足够的空间可写入，操作会立即返回，而不会阻塞等待。这对于需要处理非阻塞IO的情况非常有用，如网络编程和异步IO。
+
+以下是使用 `O_NONBLOCK` 标志的示例：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+
+int main() {
+    const char *filename = "example.txt";
+
+    // 使用 O_NONBLOCK 标志以非阻塞模式打开文件
+    int fd = open(filename, O_RDWR | O_NONBLOCK);
+
+    if (fd == -1) {
+        perror("Error opening file");
+        return 1;
+    }
+
+    // 进行非阻塞文件操作...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上面的示例中，我们使用了 `O_NONBLOCK` 标志来以非阻塞模式打开文件。这意味着在使用该文件描述符进行读写操作时，操作将立即返回，而不会阻塞等待。如果没有数据可读或没有足够的空间可写入，操作将返回一个适当的错误。
+
+需要注意的是，在非阻塞模式下，读取和写入操作可能不会始终读取或写入预期的数据量。你需要在代码中处理返回值，以适应非阻塞操作可能遇到的情况。
+
+## C open() O_RDWR 标志
+
+在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`O_RDWR` 是一个标志，用于以读写方式打开文件，即可以读取和写入文件。
+
+以下是使用 `O_RDWR` 标志的示例：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+
+int main() {
+    const char *filename = "example.txt";
+
+    // 使用 O_RDWR 标志以读写方式打开文件
+    int fd = open(filename, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening file");
+        return 1;
+    }
+
+    // 进行文件读写操作...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用了 `O_RDWR` 标志来以读写方式打开文件。这意味着我们可以使用文件描述符进行读取和写入操作。如果文件不存在，将会返回错误。如果需要，可以使用 `O_CREAT` 标志来创建文件。
+
+需要注意的是，使用 `O_RDWR` 标志打开文件时，你可以同时进行读取和写入操作，但你需要根据实际需要进行适当的读写操作管理和错误处理。同时，打开文件时也需要考虑文件权限和文件是否存在等因素。
+
+## C open() S_IWUSR 标志
+
+在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`S_IWUSR` 是一个权限标志，用于指定用户可写权限。
+
+在Linux系统中，文件权限通常由三个部分组成：所有者权限、所属组权限和其他用户权限。`S_IWUSR` 表示用户（所有者）可写权限。当你在使用 `open()` 函数创建文件时，可以使用这个权限标志来设置文件的所有者的写权限。
+
+以下是使用 `S_IWUSR` 权限标志的示例：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+
+int main() {
+    const char *filename = "example.txt";
+
+    // 使用 S_IWUSR 标志创建具有用户可写权限的文件
+    int fd = open(filename, O_RDWR | O_CREAT, S_IRUSR | S_IWUSR);
+
+    if (fd == -1) {
+        perror("Error opening/creating file");
+        return 1;
+    }
+
+    // 进行文件操作...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用了 `S_IWUSR` 权限标志来创建一个文件，该文件具有用户可写权限。我们同时使用了 `S_IRUSR` 权限标志，以确保文件也具有用户可读权限。
+
+需要注意的是，权限标志通常会与其他标志（如 `O_RDWR`、`O_CREAT` 等）一起使用。在使用权限标志时，你还需要考虑文件的其他属性，如文件所有者、所属组等。
+
+## C open() S_IRUSR 标志
+
+在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`S_IRUSR` 是一个权限标志，用于指定用户可读权限。
+
+在Linux系统中，文件权限通常由三个部分组成：所有者权限、所属组权限和其他用户权限。`S_IRUSR` 表示用户（所有者）可读权限。当你在使用 `open()` 函数创建文件时，可以使用这个权限标志来设置文件的所有者的读权限。
+
+以下是使用 `S_IRUSR` 权限标志的示例：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+
+int main() {
+    const char *filename = "example.txt";
+
+    // 使用 S_IRUSR 标志创建具有用户可读权限的文件
+    int fd = open(filename, O_RDWR | O_CREAT, S_IRUSR | S_IWUSR);
+
+    if (fd == -1) {
+        perror("Error opening/creating file");
+        return 1;
+    }
+
+    // 进行文件操作...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用了 `S_IRUSR` 权限标志来创建一个文件，该文件具有用户可读权限。我们同时使用了 `S_IWUSR` 权限标志，以确保文件也具有用户可写权限。
+
+需要注意的是，权限标志通常会与其他标志（如 `O_RDWR`、`O_CREAT` 等）一起使用。在使用权限标志时，你还需要考虑文件的其他属性，如文件所有者、所属组等。
+
+## C open() O_RDONLY 标志
+
+在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`O_RDONLY` 是一个标志，用于以只读方式打开文件，即可以读取文件但无法写入文件。
+
+以下是使用 `O_RDONLY` 标志的示例：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+
+int main() {
+    const char *filename = "example.txt";
+
+    // 使用 O_RDONLY 标志以只读方式打开文件
+    int fd = open(filename, O_RDONLY);
+
+    if (fd == -1) {
+        perror("Error opening file");
+        return 1;
+    }
+
+    // 进行文件读操作...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用了 `O_RDONLY` 标志来以只读方式打开文件。这意味着我们可以使用文件描述符进行读取操作，但是无法使用该文件描述符进行写入操作。
+
+需要注意的是，使用 `O_RDONLY` 标志打开文件时，文件只能以只读方式访问。如果你需要进行写入操作，你需要使用 `O_RDWR` 标志。同时，打开文件时还需要考虑文件的权限和文件是否存在等因素。
+
+## C 数字转布尔值
+
+在C语言中，整数可以被视为布尔值的一种表示方式，其中非零值被视为“真”（true），而零值被视为“假”（false）。这是因为C语言中的条件表达式要求返回一个真值（非零）或假值（零）。
+
+如果你想将整数显式转换为布尔值，你可以使用条件表达式或逻辑运算符来实现。以下是一些示例：
+
+1. **使用条件表达式：**
+
+```c
+#include <stdio.h>
+
+int main() {
+    int num = 42;
+    int booleanValue;
+
+    // 将整数转换为布尔值
+    booleanValue = (num != 0);
+
+    if (booleanValue) {
+        printf("The value is true.\n");
+    } else {
+        printf("The value is false.\n");
+    }
+
+    return 0;
+}
+```
+
+2. **使用逻辑运算符：**
+
+```c
+#include <stdio.h>
+
+int main() {
+    int num = -7;
+    int booleanValue;
+
+    // 将整数转换为布尔值
+    booleanValue = (num != 0);
+
+    if (booleanValue) {
+        printf("The value is true.\n");
+    } else {
+        printf("The value is false.\n");
+    }
+
+    return 0;
+}
+```
+
+在这两个示例中，我们使用条件表达式 `(num != 0)` 将整数转换为布尔值。如果整数非零，那么条件表达式的结果为真（非零），布尔值为 true；如果整数为零，条件表达式的结果为假（零），布尔值为 false。
+
+需要注意的是，C语言中没有明确的布尔类型，而是使用整数作为布尔值的表示，非零值为 true，零值为 false。所以在C语言中，你可以将非零的整数作为 true 值来使用。
+
 ## C++ 预处理指令详解
 
 C++预处理器是一个在实际编译之前执行的阶段，它处理以 `#` 开头的预处理指令。这些指令用于在源代码中进行文本替换、条件编译、头文件包含等操作，以及定义宏和条件编译代码块。以下是一些常见的C++预处理指令以及它们的作用：
