--- a/CPP/C-C++02_2_常用函数.md
+++ b/CPP/C-C++02_2_常用函数.md
@@ -2,6 +2,71 @@
 
 + C/C++常用函数，大部分为C函数
 
+## open 
+
+`open()` 函数是C语言标准库中的一个函数，用于打开文件或创建新文件。它是在文件操作中非常常用的一个函数，可以用来读取、写入和创建文件。
+
+以下是关于`open()`函数的详细解释：
+
+```c
+#include <fcntl.h>
+
+int open(const char *pathname, int flags);
+int open(const char *pathname, int flags, mode_t mode);
+```
+
+- `pathname`：表示文件路径的字符串，可以是相对路径或绝对路径。
+- `flags`：表示打开文件的标志，可以是以下之一或多个标志的组合：
+  - `O_RDONLY`：以只读方式打开文件。
+  - `O_WRONLY`：以只写方式打开文件。
+  - `O_RDWR`：以读写方式打开文件。
+  - `O_CREAT`：如果文件不存在则创建文件。
+  - `O_TRUNC`：如果文件存在，截断文件长度为0。
+  - `O_APPEND`：在文件末尾追加数据。
+- `mode`：仅在使用`O_CREAT`标志时生效，表示新创建文件的权限。
+
+`open()`函数返回一个非负整数的文件描述符（file descriptor），用于后续的文件操作。如果出现错误，它返回-1。
+
+以下是一个简单的示例，演示如何使用`open()`函数打开或创建文件：
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *filename = "example.txt";
+
+    // 使用 open() 函数创建或打开文件
+    int fd = open(filename, O_RDWR | O_CREAT, 0666);
+
+    if (fd == -1) {
+        perror("Error opening file");
+        return 1;
+    }
+
+    // 使用文件描述符进行读写操作
+    char buffer[256];
+    ssize_t bytesRead = read(fd, buffer, sizeof(buffer));
+    ssize_t bytesWritten = write(fd, "Hello, World!", 13);
+
+    if (bytesRead == -1 || bytesWritten == -1) {
+        perror("Error reading/writing file");
+        close(fd);
+        return 1;
+    }
+
+    // 关闭文件描述符
+    close(fd);
+
+    return 0;
+}
+```
+
+在示例中，我们首先使用`open()`函数打开或创建一个名为 "example.txt" 的文件，并获取文件描述符。然后，我们使用文件描述符进行读写操作，最后使用`close()`函数关闭文件描述符。
+
+请注意，`open()`函数的具体参数和标志可以根据你的需求进行调整，以便执行不同的文件操作。另外，为了防止资源泄漏，务必在不再需要使用文件描述符时使用`close()`函数关闭文件。
+
 ## ceil
 
 在 C 语言中，`ceil()` 是一个数学函数，用于向上取整（上取整数）。这意味着它会将一个浮点数值调整到不小于它的最小整数。`ceil()` 函数位于 `math.h` 头文件中。
