--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,58 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## C 打开设备文件 详解 示例
+
+在C语言中，打开设备文件通常是通过文件路径来实现的，类似于打开普通的文件。设备文件可以是串口、并口、磁盘、字符设备等。下面是一个简单的示例，演示如何在Linux系统中打开串口设备文件。
+
+```c
+#include <stdio.h>
+#include <fcntl.h>
+#include <termios.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 open() 函数打开串口设备文件
+    int fd = open(devicePath, O_RDWR | O_NOCTTY | O_NONBLOCK);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 配置串口参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+    cfmakeraw(&serialConfig);
+    cfsetispeed(&serialConfig, B9600); // 输入波特率
+    cfsetospeed(&serialConfig, B9600); // 输出波特率
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 使用设备文件进行读写操作
+    char buffer[256];
+    ssize_t bytesRead = read(fd, buffer, sizeof(buffer));
+
+    if (bytesRead == -1) {
+        perror("Error reading device file");
+        close(fd);
+        return 1;
+    }
+
+    // 关闭设备文件
+    close(fd);
+
+    return 0;
+}
+```
+
+在这个示例中，我们使用`open()`函数打开了一个串口设备文件 "/dev/ttyS0"。然后，我们配置了串口参数，将串口设置为原始模式，设置输入和输出波特率。最后，我们使用`read()`函数从设备文件中读取数据。
+
+需要注意的是，示例中的代码是一个简化版，实际上，配置和使用设备文件需要考虑更多细节，如错误处理、参数配置、数据处理等。同时，不同的设备文件可能有不同的配置和操作方式，你需要根据具体设备的文档和要求来调整代码。
+
+此外，使用`open()`函数打开设备文件时，需要具有足够的权限。在Linux系统中，通常需要使用root权限或者将用户添加到相应的设备组中。
+
 ## std::cout "\033[36m" 是什么意思
 
 在C++中，`std::cout` 是标准输出流对象，用于将文本数据打印到控制台。`\033[36m` 是一种 ANSI 转义序列，用于在终端中设置文本颜色。具体来说，`\033` 表示转义字符，`[36m` 是用于设置文本颜色的 ANSI 转义码。`[36m` 表示设置文本颜色为青色（cyan）。
@@ -1904,7 +1956,7 @@ int main() {
 ### 将float类型转为string类型
 
 + 方法一
-  ```
+  ```cpp
     //c++ 将float 类型转换成string 类型:
     #include<sstream>
 
@@ -1925,7 +1977,7 @@ int main() {
   ```
 
 + 方法二：(C++11)
-  ```
+  ```cpp
     //c++ 将float 类型转换成string 类型:
     #include<sstream>
 
@@ -1942,7 +1994,7 @@ int main() {
 ### 类中声明并初始化静态变量
 
 + 在类中，如果想要直接声明并且初始化一个静态成员，则这个静态变量必须是静态常量
-  ```
+  ```cpp
     class DataBase {
       private:
         static const int num = 123;
@@ -1966,7 +2018,7 @@ int main() {
   + `__cplusplus`：当编写C++程序时该标识符被定义。
 
 + 代码：
-  ```
+  ```cpp
     #define LOG(level, format, ...) /
         do { /
             fprintf(stderr, "[%s|%s@%s,%d] " format "/n", /
